implementacion de url en el readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://maydonoban22.github.io/web_project_around_react",
-  "name": "web_project_around_react",
+  "homepage": " https://maydonoban22.github.io/web_project_around_auth/",
+  "name": "web_project_around_auth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
